--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -5,7 +5,10 @@
   <%= page.title %>
   <%= link_to 'Show Page', page_path(page) %>
 <% end %>
+
 <!-- <% %> non-echoing tag
   ruby logic
 <%= %> Echoing tag
 Echoing - display on page -->
+
+<%= link_to 'New Page', new_page_path %>
